@@ -24,13 +24,13 @@ import org.apache.kafka.common.MetricName;
 import org.apache.kafka.common.TopicIdPartition;
 import org.apache.kafka.common.TopicPartition;
 import org.apache.kafka.common.Uuid;
+import org.apache.kafka.common.annotation.InterfaceAudience;
 import org.apache.kafka.common.metrics.KafkaMetric;
-import org.apache.kafka.common.utils.LogContext;
+import org.apache.kafka.common.utils.internals.LogContext;
 
 import java.time.Duration;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -45,6 +45,7 @@ import static org.apache.kafka.clients.consumer.internals.ConsumerUtils.DEFAULT_
  * A mock of the {@link ShareConsumer} interface you can use for testing code that uses Kafka. This class is <i> not
  * thread-safe </i>.
  */
+@InterfaceAudience.Public
 public class MockShareConsumer<K, V> implements ShareConsumer<K, V> {
 
     private final SubscriptionState subscriptions;
@@ -55,6 +56,9 @@ public class MockShareConsumer<K, V> implements ShareConsumer<K, V> {
     private boolean closed;
     private Uuid clientInstanceId;
 
+    /**
+     * Constructs a new MockShareConsumer for testing.
+     */
     public MockShareConsumer() {
         this.subscriptions = new SubscriptionState(new LogContext(), AutoOffsetResetStrategy.NONE);
         this.records = new HashMap<>();
@@ -71,7 +75,7 @@ public class MockShareConsumer<K, V> implements ShareConsumer<K, V> {
     @Override
     public synchronized void subscribe(Collection<String> topics) {
         ensureNotClosed();
-        subscriptions.subscribe(new HashSet<>(topics), Optional.empty());
+        subscriptions.subscribe(new HashSet<>(topics));
     }
 
     @Override
@@ -142,7 +146,7 @@ public class MockShareConsumer<K, V> implements ShareConsumer<K, V> {
     @Override
     public synchronized Map<MetricName, ? extends Metric> metrics() {
         ensureNotClosed();
-        return Collections.emptyMap();
+        return Map.of();
     }
 
     @Override
