@@ -19,7 +19,7 @@ package org.apache.kafka.common.requests;
 
 import org.apache.kafka.common.ElectionType;
 import org.apache.kafka.common.TopicPartition;
-import org.apache.kafka.common.errors.UnsupportedVersionException;
+import org.apache.kafka.common.internals.UnsupportedProtocolFieldException;
 import org.apache.kafka.common.message.ElectLeadersRequestData;
 import org.apache.kafka.common.message.ElectLeadersRequestData.TopicPartitions;
 import org.apache.kafka.common.message.ElectLeadersResponseData.PartitionResult;
@@ -30,7 +30,6 @@ import org.apache.kafka.common.protocol.Readable;
 
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
@@ -64,7 +63,7 @@ public class ElectLeadersRequest extends AbstractRequest {
 
         private ElectLeadersRequestData toRequestData(short version) {
             if (electionType != ElectionType.PREFERRED && version == 0) {
-                throw new UnsupportedVersionException("API Version 0 only supports PREFERRED election type");
+                throw new UnsupportedProtocolFieldException(electionType.name(), apiKey().name(), version, 1);
             }
 
             ElectLeadersRequestData data = new ElectLeadersRequestData()
@@ -92,7 +91,7 @@ public class ElectLeadersRequest extends AbstractRequest {
 
     public Set<TopicPartition> topicPartitions() {
         if (this.data.topicPartitions() == null) {
-            return Collections.emptySet();
+            return Set.of();
         }
         return this.data.topicPartitions().stream()
             .flatMap(topicPartition -> topicPartition.partitions().stream()
