@@ -17,15 +17,16 @@
 package org.apache.kafka.common.requests;
 
 import org.apache.kafka.common.errors.InvalidConfigurationException;
-import org.apache.kafka.common.errors.UnsupportedVersionException;
 import org.apache.kafka.common.internals.Topic;
+import org.apache.kafka.common.internals.UnsupportedProtocolFieldException;
 import org.apache.kafka.common.message.JoinGroupRequestData;
 import org.apache.kafka.common.message.JoinGroupResponseData;
 import org.apache.kafka.common.protocol.ApiKeys;
 import org.apache.kafka.common.protocol.Errors;
 import org.apache.kafka.common.protocol.Readable;
 
-import java.util.Collections;
+import java.util.List;
+
 
 public class JoinGroupRequest extends AbstractRequest {
 
@@ -41,8 +42,7 @@ public class JoinGroupRequest extends AbstractRequest {
         @Override
         public JoinGroupRequest build(short version) {
             if (data.groupInstanceId() != null && version < 5) {
-                throw new UnsupportedVersionException("The broker join group protocol version " +
-                        version + " does not support usage of config group.instance.id.");
+                throw new UnsupportedProtocolFieldException("GroupInstanceId", apiKey().name(), version, 5);
             }
             return new JoinGroupRequest(data, version);
         }
@@ -197,7 +197,7 @@ public class JoinGroupRequest extends AbstractRequest {
             .setProtocolName(UNKNOWN_PROTOCOL_NAME)
             .setLeader(UNKNOWN_MEMBER_ID)
             .setMemberId(UNKNOWN_MEMBER_ID)
-            .setMembers(Collections.emptyList());
+            .setMembers(List.of());
 
         if (version() >= 7)
             data.setProtocolName(null);
