@@ -16,13 +16,14 @@
  */
 package kafka.examples;
 
-import org.apache.kafka.clients.consumer.ConsumerRebalanceListener;
 import org.apache.kafka.clients.consumer.ConsumerRecord;
 import org.apache.kafka.clients.consumer.ConsumerRecords;
 import org.apache.kafka.clients.consumer.KafkaConsumer;
 import org.apache.kafka.clients.consumer.NoOffsetForPartitionException;
 import org.apache.kafka.clients.consumer.OffsetAndMetadata;
 import org.apache.kafka.clients.consumer.OffsetOutOfRangeException;
+import org.apache.kafka.clients.consumer.RebalanceConsumer;
+import org.apache.kafka.clients.consumer.RebalanceListener;
 import org.apache.kafka.clients.producer.KafkaProducer;
 import org.apache.kafka.clients.producer.ProducerRecord;
 import org.apache.kafka.common.KafkaException;
@@ -36,20 +37,19 @@ import org.apache.kafka.common.errors.UnsupportedVersionException;
 
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.Optional;
+import java.util.Set;
 import java.util.concurrent.CountDownLatch;
 
 import static java.time.Duration.ofMillis;
-import static java.util.Collections.emptyList;
-import static java.util.Collections.singleton;
 
 /**
  * This class implements a read-process-write application.
  */
-public class ExactlyOnceMessageProcessor extends Thread implements ConsumerRebalanceListener, AutoCloseable {
+public class ExactlyOnceMessageProcessor extends Thread implements RebalanceListener, AutoCloseable {
     private static final int MAX_RETRIES = 5;
     
     private final String bootstrapServers;
@@ -121,7 +121,8 @@ public class ExactlyOnceMessageProcessor extends Thread implements ConsumerRebal
                  "processor-group", Optional.of(groupInstanceId), readCommitted, -1, null).createKafkaConsumer()) {
             // called first and once to fence zombies and abort any pending transaction
             producer.initTransactions();
-            consumer.subscribe(singleton(inputTopic), this);
+            consumer.setRebalanceListener(this);
+            consumer.subscribe(Set.of(inputTopic));
 
             Utils.printOut("Processing new records");
             while (!closed && remainingRecords > 0) {
@@ -155,7 +156,7 @@ public class ExactlyOnceMessageProcessor extends Thread implements ConsumerRebal
                 } catch (OffsetOutOfRangeException | NoOffsetForPartitionException e) {
                     // invalid or no offset found without auto.reset.policy
                     Utils.printOut("Invalid or no offset found, using latest");
-                    consumer.seekToEnd(emptyList());
+                    consumer.seekToEnd(List.of());
                     consumer.commitSync();
                     retries = 0;
                 } catch (KafkaException e) {
@@ -179,17 +180,17 @@ public class ExactlyOnceMessageProcessor extends Thread implements ConsumerRebal
     }
 
     @Override
-    public void onPartitionsRevoked(Collection<TopicPartition> partitions) {
+    public void onPartitionsRevoked(Collection<TopicPartition> partitions, RebalanceConsumer consumer) {
         Utils.printOut("Revoked partitions: %s", partitions);
     }
 
     @Override
-    public void onPartitionsAssigned(Collection<TopicPartition> partitions) {
+    public void onPartitionsAssigned(Collection<TopicPartition> partitions, RebalanceConsumer consumer) {
         Utils.printOut("Assigned partitions: %s", partitions);
     }
 
     @Override
-    public void onPartitionsLost(Collection<TopicPartition> partitions) {
+    public void onPartitionsLost(Collection<TopicPartition> partitions, RebalanceConsumer consumer) {
         Utils.printOut("Lost partitions: %s", partitions);
     }
 
@@ -244,7 +245,7 @@ public class ExactlyOnceMessageProcessor extends Thread implements ConsumerRebal
                 if (offsetAndMetadata != null) {
                     consumer.seek(tp, offsetAndMetadata.offset());
                 } else {
-                    consumer.seekToBeginning(Collections.singleton(tp));
+                    consumer.seekToBeginning(Set.of(tp));
                 }
             });
             retries++;
