@@ -20,8 +20,11 @@ import org.apache.kafka.common.message.StreamsGroupDescribeResponseData;
 import org.apache.kafka.coordinator.group.generated.StreamsGroupCurrentMemberAssignmentValue;
 import org.apache.kafka.coordinator.group.generated.StreamsGroupMemberMetadataValue;
 
+import org.slf4j.Logger;
+
 import java.util.ArrayList;
 import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -102,9 +105,13 @@ public record StreamsGroupMember(String memberId,
         }
 
         public Builder(StreamsGroupMember member) {
+            this(Objects.requireNonNull(member, "member cannot be null"), member.memberId);
+        }
+
+        public Builder(StreamsGroupMember member, String memberId) {
             Objects.requireNonNull(member, "member cannot be null");
 
-            this.memberId = member.memberId;
+            this.memberId = memberId;
             this.memberEpoch = member.memberEpoch;
             this.previousMemberEpoch = member.previousMemberEpoch;
             this.instanceId = member.instanceId;
@@ -249,12 +256,14 @@ public record StreamsGroupMember(String memberId,
             return this;
         }
 
-        public Builder updateWith(StreamsGroupCurrentMemberAssignmentValue record) {
+        public Builder updateWith(Logger log, String groupId, StreamsGroupCurrentMemberAssignmentValue record) {
             setMemberEpoch(record.memberEpoch());
             setPreviousMemberEpoch(record.previousMemberEpoch());
             setState(MemberState.fromValue(record.state()));
             setAssignedTasks(
                 TasksTupleWithEpochs.fromCurrentAssignmentRecord(
+                    log,
+                    groupId,
                     record.activeTasks(),
                     record.standbyTasks(),
                     record.warmupTasks(),
@@ -263,6 +272,8 @@ public record StreamsGroupMember(String memberId,
             );
             setTasksPendingRevocation(
                 TasksTupleWithEpochs.fromCurrentAssignmentRecord(
+                    log,
+                    groupId,
                     record.activeTasksPendingRevocation(),
                     record.standbyTasksPendingRevocation(),
                     record.warmupTasksPendingRevocation(),
@@ -281,7 +292,7 @@ public record StreamsGroupMember(String memberId,
                 .setClientId("")
                 .setClientHost("")
                 .setProcessId("")
-                .setClientTags(Collections.emptyMap())
+                .setClientTags(Map.of())
                 .setState(MemberState.STABLE)
                 .setMemberEpoch(0)
                 .setPreviousMemberEpoch(0)
@@ -309,6 +320,37 @@ public record StreamsGroupMember(String memberId,
                 tasksPendingRevocation
             );
         }
+
+        /**
+         * Resets the assignment epochs to 0 for all assigned active tasks.
+         * Used when a static member leaves, so that the rejoining member's
+         * active tasks will be assigned from epoch 0 to the new member ID.
+         * All commits using the old member ID will be fenced.
+         */
+        public Builder resetAssignedTasksEpochsToZero() {
+            if (this.assignedTasks.isEmpty()) {
+                return this;
+            }
+
+            if (this.assignedTasks.activeTasksWithEpochs().isEmpty()) {
+                return this;
+            }
+
+            Map<String, Map<Integer, Integer>> resetActiveTasks = new HashMap<>();
+            for (Map.Entry<String, Map<Integer, Integer>> entry : this.assignedTasks.activeTasksWithEpochs().entrySet()) {
+                Map<Integer, Integer> resetActiveTaskEpochs = new HashMap<>();
+                for (Integer partitionId : entry.getValue().keySet()) {
+                    resetActiveTaskEpochs.put(partitionId, 0);
+                }
+                resetActiveTasks.put(entry.getKey(), resetActiveTaskEpochs);
+            }
+            this.assignedTasks = new TasksTupleWithEpochs(
+                resetActiveTasks,
+                this.assignedTasks.standbyTasks(),
+                this.assignedTasks.warmupTasks()
+            );
+            return this;
+        }
     }
 
     /**
@@ -322,10 +364,17 @@ public record StreamsGroupMember(String memberId,
      * Creates a member description for the streams group describe response from this member.
      *
      * @param targetAssignment The target assignment of this member in the corresponding group.
+     * @param taskOffsets      The latest per-task changelog offsets and end-offsets the member reported via its
+     *                         heartbeat. These are transient (never persisted) and read from live in-memory group
+     *                         state, so {@link MemberTaskOffsets#EMPTY} (or {@code null}) yields empty lists.
      *
      * @return The StreamsGroupMember mapped as StreamsGroupDescribeResponseData.Member.
      */
-    public StreamsGroupDescribeResponseData.Member asStreamsGroupDescribeMember(TasksTuple targetAssignment) {
+    public StreamsGroupDescribeResponseData.Member asStreamsGroupDescribeMember(
+        TasksTuple targetAssignment,
+        MemberTaskOffsets taskOffsets
+    ) {
+        final MemberTaskOffsets reportedOffsets = taskOffsets == null ? MemberTaskOffsets.EMPTY : taskOffsets;
         final StreamsGroupDescribeResponseData.Assignment describedTargetAssignment =
             new StreamsGroupDescribeResponseData.Assignment();
 
@@ -354,6 +403,8 @@ public record StreamsGroupMember(String memberId,
                     .setKey(entry.getKey())
                     .setValue(entry.getValue())
             ).toList())
+            .setTaskOffsets(taskOffsetsFromMap(reportedOffsets.taskOffsets()))
+            .setTaskEndOffsets(taskOffsetsFromMap(reportedOffsets.taskEndOffsets()))
             .setProcessId(processId)
             .setTopologyEpoch(topologyEpoch)
             .setUserEndpoint(
@@ -363,6 +414,18 @@ public record StreamsGroupMember(String memberId,
                         .setPort(endpoint.port())
                     ).orElse(null)
             );
+    }
+
+    private static List<StreamsGroupDescribeResponseData.TaskOffset> taskOffsetsFromMap(Map<String, Map<Integer, Long>> offsets) {
+        List<StreamsGroupDescribeResponseData.TaskOffset> taskOffsets = new ArrayList<>();
+        offsets.keySet().stream().sorted().forEach(subtopologyId ->
+            offsets.get(subtopologyId).entrySet().stream()
+                .sorted(Map.Entry.comparingByKey())
+                .forEach(entry -> taskOffsets.add(new StreamsGroupDescribeResponseData.TaskOffset()
+                    .setSubtopologyId(subtopologyId)
+                    .setPartition(entry.getKey())
+                    .setOffset(entry.getValue()))));
+        return taskOffsets;
     }
 
     private static List<StreamsGroupDescribeResponseData.TaskIds> taskIdsFromMap(Map<String, Set<Integer>> tasks) {
